# Magneto

./: AllTestScripts.txt  ImplementationScripts.sh  README.md
oracleFromBehavior/: imageUtilities.py  pyproject.toml  readTextInImage.py  xmlUtilities.py
oracleFromBehavior/arranged/1/: Execution-12.json
oracleFromBehavior/arranged/11/: Execution-12.json
oracleFromBehavior/arranged/17/: Execution-12.json
oracleFromBehavior/arranged/25/: Execution-12.json  com.alexstyl.specialdates-25-12-User-Trace-2.xml
oracleFromBehavior/arranged/28/: Execution-12.json  fr.free.nrw.commons.beta-28-12-User-Trace-3.xml  fr.free.nrw.commons.beta-28-12-User-Trace-7.xml
oracleFromBehavior/arranged/51/: com.android.gpstest-31-12-User-Trace-11.xml
oracleFromBehavior/arranged/72/: Execution-12.json  org.mozilla.focus-72-12-User-Trace-0.xml  org.mozilla.focus-72-12-User-Trace-3.xml
oracleFromBehavior/arranged/94/: com.ichi2.anki-94-12-User-Trace-15.xml  com.ichi2.anki-94-12-User-Trace-17.xml  com.ichi2.anki-94-12-User-Trace-5.xml
oracleFromBehavior/backButton/: SSIM-withoutReport.py  labelPredictor.py
oracleFromBehavior/languageDetection/: detectLanguageAll.py  detectLanguageNext.py  language_code.json
oracleFromBehavior/orientationChange/: Execution-12.json  findRotationCheckInput.py
oracleFromBehavior/sizeOfList/: findListCheckSize.py
oracleFromBehavior/themeChange/: binaryClassifier.py  labelPredictor.py  themeCheck.py
oracleFromBehavior/userEnteredData/: findTriggerCheckInput.py
oracleFromBehavior/userSelection/: findTriggerCheckSelection.py
(+485 files in other folders)
